# Kubernetes-RAG-assistant

./: .gitignore  Makefile  notes.txt  pyproject.toml
app/api/: main.py  test.py
app/core/: config.py
app/database/: db_init.py  db_pool.py  db_save.py
app/evaluation/: eval_utils.py  metrics.py  online_judge.py  rag_evaluation.py  search_evaluation.py
app/rag/: rag.py  rag_base.py  rag_utils.py
deployment/: Dockerfile  db_query.py  db_save.py  docker-compose.yml
ingestion/: scraper.py
monitoring/: grafana_dashboard.json
scripts/: doc_builder.py  generate_qa.py  run_ingestion.py
