[project]
name = "k8s-rag-assistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi[standard]>=0.137.2",
    "minsearch>=0.1.0",
    "openai>=2.41.1",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tqdm>=4.68.2",
]
